--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jnexpert-cra",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://luojh.me/react-blog/build",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
